; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/netkey/extr_keysock.c_key_bind.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/netkey/extr_keysock.c_key_bind.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 (%struct.socket*, %struct.sockaddr*, %struct.proc*)* }
%struct.socket = type { i32 }
%struct.sockaddr = type { i32 }
%struct.proc = type { i32 }

@raw_usrreqs = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.socket*, %struct.sockaddr*, %struct.proc*)* @key_bind to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @key_bind(%struct.socket* %0, %struct.sockaddr* %1, %struct.proc* %2) #0 {
  %4 = alloca %struct.socket*, align 8
  %5 = alloca %struct.sockaddr*, align 8
  %6 = alloca %struct.proc*, align 8
  %7 = alloca i32, align 4
  store %struct.socket* %0, %struct.socket** %4, align 8
  store %struct.sockaddr* %1, %struct.sockaddr** %5, align 8
  store %struct.proc* %2, %struct.proc** %6, align 8
  %8 = load i32 (%struct.socket*, %struct.sockaddr*, %struct.proc*)*, i32 (%struct.socket*, %struct.sockaddr*, %struct.proc*)** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @raw_usrreqs, i32 0, i32 0), align 8
  %9 = load %struct.socket*, %struct.socket** %4, align 8
  %10 = load %struct.sockaddr*, %struct.sockaddr** %5, align 8
  %11 = load %struct.proc*, %struct.proc** %6, align 8
  %12 = call i32 %8(%struct.socket* %9, %struct.sockaddr* %10, %struct.proc* %11)
  store i32 %12, i32* %7, align 4
  %13 = load i32, i32* %7, align 4
  ret i32 %13
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
